First version of the tile view
- First version of the tile view
- Combination of the dialogs GPU-Core-Workload and GPU-Core-Temperature
into one dialog
- Introducing of an EventAggregator to avoid timers
- Fundamental changes in the OHWM-Service for the usage of the
EventAggregator
- Performance improvements
- Various technical changes

--- a/YAHW/MainWindow.xaml
+++ b/YAHW/MainWindow.xaml
@@ -40,6 +40,7 @@
         <mui:LinkGroup DisplayName="{lex:Loc YAHW:Resources:MainWindowOverview}">
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowHome}" Source="/Pages/Home.xaml" />
+                <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowTileView}" Source="/Pages/TilePage.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <!-- Mainboard -->
@@ -61,8 +62,6 @@
         <mui:LinkGroup DisplayName="{lex:Loc YAHW:Resources:MainWindowGPU}">
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowGPUInformation}" Source="/Pages/GPUInformation.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowGPUCoreWorkload}" Source="/Pages/GPUCoreWorkloads.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowGPUCoreTemperatures}" Source="/Pages/GPUCoreTemperatures.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <!-- RAM -->
