--- a/YAHW/UserControls/SensorTile.xaml
+++ b/YAHW/UserControls/SensorTile.xaml
@@ -15,11 +15,31 @@
              MaxWidth="150"
              d:DesignHeight="110" 
              d:DesignWidth="150">
-    
+
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
+    </UserControl.Resources>
+
     <Border DataContext="{Binding ElementName=layoutRoot}"
             BorderThickness="1" 
             BorderBrush="Black" 
+            Background="{Binding Path=TileBackground, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
             Margin="3">
+
+        <Border.ContextMenu>
+            <ContextMenu Visibility="{Binding Path=IsContextMenuEnabled, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, Converter={StaticResource booleanToVisibilityConverter}}">
+                <MenuItem x:Name="mnuDeleteSensorTile" Header="Löschen" Click="mnuDeleteSensorTile_Click">
+                    <MenuItem.Icon>
+                        <Rectangle Width="16" Height="16">
+                            <Rectangle.Fill>
+                                <VisualBrush Visual="{StaticResource appbar_tiles_minus}" />
+                            </Rectangle.Fill>
+                        </Rectangle>
+                    </MenuItem.Icon>
+                </MenuItem>
+            </ContextMenu>
+        </Border.ContextMenu>
+        
         <Grid Margin="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
